[gd_scene load_steps=7 format=3 uid="uid://ce0wc5rps1rtf"]

[ext_resource type="Texture2D" uid="uid://u5eiuc85lgwa" path="res://image/внутри изба.png" id="1_f5wbp"]
[ext_resource type="Script" path="res://script/izba_chat.gd" id="1_r3qbm"]
[ext_resource type="PackedScene" uid="uid://mikeqsmwm4uh" path="res://scene/CanvasLayer.tscn" id="2_tod5j"]
[ext_resource type="Texture2D" uid="uid://b47rhrfmxtt4i" path="res://image/крестьянин.png" id="3_ocb2t"]
[ext_resource type="Texture2D" uid="uid://cm87jarxdx8ay" path="res://image/самовар.png" id="5_5m6jj"]
[ext_resource type="Texture2D" uid="uid://bptbu37byp1u5" path="res://image/icon.svg" id="6_irjmy"]

[node name="izba" type="Node2D"]
script = ExtResource("1_r3qbm")

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-130, -27)
color = Color(0.160784, 0.0627451, 0.0470588, 1)
polygon = PackedVector2Array(-638, -300, -631, 1128, 2020, 1218, 2118, -458)

[node name="ВнутриИзба" type="Sprite2D" parent="."]
position = Vector2(313, 271)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_f5wbp")

[node name="CanvasLayer" parent="." instance=ExtResource("2_tod5j")]

[node name="Крестьянин" type="Sprite2D" parent="."]
position = Vector2(865, 178)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_ocb2t")

[node name="samovar" type="TouchScreenButton" parent="."]
position = Vector2(255, 330)
scale = Vector2(0.08, 0.08)
texture_normal = ExtResource("5_5m6jj")

[node name="ochag" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(440, 232)
rotation = 0.720821
scale = Vector2(0.664063, 0.773438)
texture_normal = ExtResource("6_irjmy")

[node name="skamia" type="TouchScreenButton" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(350, 367)
rotation = 0.720821
scale = Vector2(0.664063, 0.773438)
texture_normal = ExtResource("6_irjmy")

[connection signal="pressed" from="samovar" to="." method="_on_samovar_pressed"]
[connection signal="pressed" from="ochag" to="." method="_on_ochag_pressed"]
[connection signal="pressed" from="skamia" to="." method="_on_skamia_pressed"]
